# pytest-result-sender

./: README.md  main.py  msg.md  pyproject.toml  pytest.ini  robot.py
src/pytest_result_sender/: plugin.py
tests/: test_abc.py  test_ini.py
